--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,45 @@
 spring.application.name=main
 
 home.welcome=Hello World
+
+
+#### Logging Properties. Logging based on package names
+#
+#   logging.level.org.springframework = DEBUG
+#   logging.level.org.hibernate =       TRACE
+#   logging.level.concepts.main =       INFO
+#
+#### Tomcat Properties
+#
+#   server.port = 7070
+#
+#   Requests must go through localhost:7070/demo-path/
+#   server.servlet.context-path=/demo-path
+#   server.servlet.session.timeout= 15m
+#
+#### Spring Security
+#
+#   spring.security.user.name=        pcann
+#   spring.security.user.password=    pcannpass
+#
+#### Actuator Properties
+#
+#   Enpoints to include by name or wildcard
+#   management.endpoints.web.exposure.include=*
+#
+#   Endpoints to exclude by name or wildcard
+#   management.endpoints.web.exposure.exclude = beans, mapping
+#
+#   BasePath for actuator endpoints
+#   management.endpoints.web.base-path=/actuator
+#
+#### Data Properties
+#
+#   JDBC URL of database
+#   spring.datasource.url= jdbc:mysql://localhost:3306/ecommerce
+#
+#   Login username of the database
+#   spring.datasource.username=scott
+#
+#   Login password of the database
+#   spring.datasource.password=tiger
