global lazy bean init

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=main
 
 home.welcome=Hello World
 
+spring.main.lazy-initialization=true
 
 #### Logging Properties. Logging based on package names
 #
