--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,14 @@ home.welcome=Hello World
 
 spring.main.lazy-initialization=true
 
+spring.datasource.url= jdbc:mysql://localhost:3306/spring
+spring.datasource.username=root
+spring.datasource.password=javaSpringBoot12#
+
+spring.main.banner-mode=off
+logging.level.root=warn
+
+
 #### Logging Properties. Logging based on package names
 #
 #   logging.level.org.springframework = DEBUG
